--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/app.js",
-    "dev": "nodemon server/app.js"
+    "dev": "nodemon server/app.js",
+    "postinstall": "node ./node_modules/bower/bin/bower install"
+  },
+  "engines": {
+    "node": "8.2.1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bower": "^1.8.0",
     "express": "^4.15.4",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.7",
