--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "angular-loading-bar": "^0.9.0",
-    "angular-route": "^1.6.5"
+    "angular-route": "^1.6.5",
+    "angular-paging": "^2.2.2"
   }
 }
